Fixes home page formatting on mobile

--- a/style.css
+++ b/style.css
@@ -279,3 +279,21 @@ pre code.hljs  {
     font-style: normal;
     font-size: 1rem;
 }
+
+@media screen and (max-width: 600px) {
+    .content {
+        padding: 2rem 2rem 1rem 2rem;
+    }
+
+    .image {
+        display: none;
+    }
+
+    footer .inner {
+        width: calc(100% - 4rem);
+    }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+}
